[tool.poetry]
name = "weatherchecker"
version = "0.1.0"
description = ""
authors = ["IgorDiamandi <161752477+IgorDiamandi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytz = "^2024.1"
geopy = "^2.4.1"
timezonefinder = "^6.5.0"
requests = "^2.32.3"
pandas = "^2.2.2"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
